# openapi.yaml
@@ -145,10 +145,9 @@ components:
 
     User:
       type: object
+      required:
+        - role
       properties:
-        id:
-          type: integer
-          readOnly: true
         role:
           oneOf:
             - $ref: "#/components/schemas/UserRole"
@@ -221,3 +220,8 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Book"
+
+examples:
+  /me200:
+    value:
+      - role: "ADMIN"
